<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="414dp"
        android:layout_height="188dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@+string/Weight Tracker Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wt_logo" />

    <TextView
        android:id="@+id/registerLabel"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="128dp"
        android:gravity="center"
        android:text="@string/register_link"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:autoSizeMaxTextSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="76dp"
        android:layout_height="21dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="167dp"
        android:gravity="center"
        android:text="@string/user_name_label"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actualName" />

    <TextView
        android:id="@+id/userPasswordLabel"
        android:layout_width="70dp"
        android:layout_height="23dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="171dp"
        android:gravity="center"
        android:text="@string/user_password_label"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="234dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="89dp"
        android:contentDescription="@string/user_password_speakable"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPasswordLabel"
        tools:ignore="EditableContentDescCheck" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="234dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="89dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/user_name_hint"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameLabel" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="153dp"
        android:gravity="center"
        android:onClick="newUserRegister"
        android:text="@string/register_link"
        android:hint="@string/register_button_hint"
        app:backgroundTint="@color/logo_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPhone" />

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="63dp"
        android:layout_height="48dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:onClick="onLoginClick"
        android:text="@string/login_label"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/userActualName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="171dp"
        android:gravity="center"
        android:text="@string/user_actual_name"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerLabel" />

    <EditText
        android:id="@+id/actualName"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/your_name_hint"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userActualName" />

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="177dp"
        android:gravity="center"
        android:text="@string/phone_label"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPassword" />

    <EditText
        android:id="@+id/userPhone"
        android:layout_width="234dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="89dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="phone"
        android:textColor="@color/black"
        android:hint="@string/phone_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>