<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="413dp"
        android:layout_height="235dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@+string/Weight Tracker Logo"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wt_logo" />

    <TextView
        android:id="@+id/navAddWeight"
        android:layout_width="280dp"
        android:layout_height="33dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/nav_add_weight"
        android:textColor="#BF6300"
        android:textSize="22sp"
        android:hint="Tap this text to add starting weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/navUpdateGoal"
        android:layout_width="281dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/nav_update_goal"
        android:textColor="#BF6300"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navAddWeight" />

    <TextView
        android:id="@+id/navWeightTrack"
        android:layout_width="281dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#BF6300"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navUpdateGoal" />

    <TextView
        android:id="@+id/navLogOut"
        android:layout_width="281dp"
        android:layout_height="38dp"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/nav_logout"
        android:textColor="#BF6300"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navWeightTrack" />


</androidx.constraintlayout.widget.ConstraintLayout>