<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="413dp"
        android:layout_height="235dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@+string/Weight Tracker Logo"
        app:layout_constraintBottom_toTopOf="@+id/loginLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wt_logo" />

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="78dp"
        android:layout_height="48dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/login_label"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:autoSizeMaxTextSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/userNameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/user_name_speakable"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/userPasswordLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameLabel" />

    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="76dp"
        android:layout_height="21dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="165dp"
        android:gravity="center"
        android:text="@string/user_name_label"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLabel" />

    <TextView
        android:id="@+id/userPasswordLabel"
        android:layout_width="70dp"
        android:layout_height="23dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:text="@string/user_password_label"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/userPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="234dp"
        android:layout_height="41dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/user_password_speakable"
        android:ems="10"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPasswordLabel"
        tools:ignore="EditableContentDescCheck" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:text="@string/login_label"
        android:hint="Use this button to login"
        app:backgroundTint="@color/logo_orange"
        app:layout_constraintBottom_toTopOf="@+id/registerLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPassword" />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="65dp"
        android:layout_height="21dp"
        android:layout_marginStart="174dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:onClick="onRegisterClick"
        android:text="@string/register_link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>