<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProgressActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="413dp"
        android:layout_height="235dp"
        android:layout_marginBottom="23dp"
        android:contentDescription="@+string/Weight Tracker Logo"
        app:layout_constraintBottom_toTopOf="@+id/startWeightLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wt_logo" />

    <TextView
        android:id="@+id/startWeightLabel"
        android:layout_width="264dp"
        android:layout_height="58dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="11dp"
        android:gravity="center"
        android:text="@string/user_starting_weight"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:autoSizeMaxTextSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/WeightUnit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <TextView
        android:id="@+id/userStartingWeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/weight_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WeightUnit" />

    <TextView
        android:id="@+id/WeightUnit"
        android:layout_width="319dp"
        android:layout_height="76dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="26dp"
        android:text="@string/weight_unit_text"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/userStartingWeightLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startWeightLabel" />

    <EditText
        android:id="@+id/progressWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userStartingWeightLabel" />

    <Button
        android:id="@+id/btnProgressWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/enter_weight"
        app:backgroundTint="@color/logo_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressWeight" />


</androidx.constraintlayout.widget.ConstraintLayout>